samples/_failures_safe/1761439755_7e0a50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77b80f6a.c: In function ‘main’:
./samples/SAFE/__tmp_77b80f6a.c:151:28: error: missing terminating " character
  151 |                     printf("Error: Matrix
      |                            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_77b80f6a.c:151:21: error: expected expression at end of input
  151 |                     printf("Error: Matrix
      |                     ^~~~~~
./samples/SAFE/__tmp_77b80f6a.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77b80f6a.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77b80f6a.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77b80f6a.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77b80f6a.c:151:21: error: expected declaration or statement at end of input
